--- a/css/index.css
+++ b/css/index.css
@@ -59,3 +59,69 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+main {
+  display: flex;
+  padding-top: 90px;
+  padding-inline: 32px;
+}
+
+.main-text {
+  width: 50%;
+
+}
+
+span {
+  color: #07B464;
+}
+
+h1 {
+font-family: 'Inter', sans-serif;
+font-weight: 700;
+font-size: 45px;
+line-height: 64px;
+margin-bottom: 22px;
+}
+
+p {
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000000;
+  margin-bottom: 32px;
+}
+
+.know-button {
+  background: linear-gradient(180deg, #34E06F 0%, #07B464 100%);
+  border-radius: 12px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 2px 4px rgba(255, 255, 255, 0.25), inset 0px -2px 4px rgba(0, 0, 0, 0.25);
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;
+  padding: 15px 60px;
+  margin-top: 10px;
+  display: inline-block;
+
+}
+
+.main-img {
+  width: 667px;
+  margin-top: -135px;
+  padding-right: 20px;
+  background-color: #EBFCF4;
+}
+
+.main-img-yoga {
+width: 100%;
+}
+
+.footer-text {
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+  font-weight: 700;
+  font-size: 27px;
+  line-height: 64px;
+  color: #0b4654;
+  }
